--- a/practice.html
+++ b/practice.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <body>
+            <h1>DAYS</h1>
             <a href="https://mukhi001.github.io/New-1/">Day-1</a> <br/>
             <a href="https://mukhi001.github.io/New--2/">Day-2</a>
         </body>
